[gd_scene load_steps=3 format=3 uid="uid://bl0lqn8s0d1d3"]

[ext_resource type="Script" path="res://src/node/radial_gradient_picker.gd" id="1_alx0g"]
[ext_resource type="PackedScene" uid="uid://bdyvforlk3gff" path="res://scenes/node/gradient_editor.tscn" id="2_pfqv6"]

[node name="RadialGradientPicker" type="Popup"]
size = Vector2i(350, 792)
visible = true
max_size = Vector2i(350, 32768)
script = ExtResource("1_alx0g")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 300.0
offset_bottom = 650.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Padding" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2

[node name="Padding" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "RADIAL_GRADIENT_CENTER_POINT"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "x: "

[node name="CenterX" type="SpinBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "y: "

[node name="CenterY" type="SpinBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Padding" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "RADIAL_GRADIENT_HANDLE_1"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "x: "

[node name="Handle1X" type="SpinBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "y: "

[node name="Handle1Y" type="SpinBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Padding" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "RADIAL_GRADIENT_HANDLE_2"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
layout_mode = 2
text = "x: "

[node name="Handle2X" type="SpinBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
layout_mode = 2
text = "y: "

[node name="Handle2Y" type="SpinBox" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Padding" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="EditButton" type="Button" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "RADIAL_GRADIENT_EDIT"

[node name="Padding2" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2

[node name="Padding2" type="Control" parent="PanelContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="GradientEditor" parent="PanelContainer/VBoxContainer" instance=ExtResource("2_pfqv6")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/CenterX" to="." method="_on_center_x_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/CenterY" to="." method="_on_center_y_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Handle1X" to="." method="_on_handle_1x_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/Handle1Y" to="." method="_on_handle_1y_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer/Handle2X" to="." method="_on_handle_2x_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer4/HBoxContainer/Handle2Y" to="." method="_on_handle_2y_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/VBoxContainer/HBoxContainer3/EditButton" to="." method="_on_edit_button_pressed"]
